# dedup_signature

./: .travis.yml  Cargo.toml  LICENSE  README.md
src/: generator.rs  hash.rs  lib.rs
src/generator/: lookup3.rs  lookup3_signature.rs  mod.rs  text_profile_signature.rs
tests/: lookup3_test.rs  test_lib.rs  test_lookup3_signature.rs  text_profile_signature_test.rs
tests/fixtures/: liberty_article_from_de_wikipedia.yaml  liberty_article_from_en_wikipedia.yaml  liberty_article_from_es_wikipedia.yaml  liberty_article_from_fr_wikipedia.yaml  liberty_article_from_it_wikipedia.yaml  liberty_article_from_pt_wikipedia.yaml
